推荐，柱状图

--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "axios": "^0.20.0",
     "cjs": "^0.0.11",
     "core-js": "^3.6.5",
-    "echarts": "^4.9.0",
+    "echarts": "^5.3.1",
     "element-ui": "^2.4.5",
     "js-cookie": "^2.2.1",
     "less": "^3.12.2",
     "less-loader": "^7.0.1",
+    "moment": "^2.29.1",
     "node-ipc": "^10.1.0",
     "sass-loader": "^7.0.3",
     "v-viewer": "^1.6.4",
